--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Glitch!</title>
-    <meta name="description" content="A cool thing made with Glitch">
-    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <title>Welcome to Timestamp!</title>
+    <meta name="description" content="A Unix timestamp service">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,9 +38,6 @@
     </main>
 
     <footer>
-      <a href="https://glitch.com">
-        Remix this in Glitch
-      </a>
     </footer>
 
     <!-- Your web-app is https, so your scripts need to be too -->
