--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,3 @@
-/* styles */
-/* called by your view template */
-
-/* You might want to try something fancier: */
-/* less: http://lesscss.org/ */
 
 * {
   box-sizing: border-box;
@@ -14,6 +9,11 @@ body {
 }
 
 h1 {
+  font-weight: bold;
+  color: pink;
+}
+
+h3 {
   font-weight: bold;
   color: pink;
 }
