--- a/views/description.html
+++ b/views/description.html
@@ -16,9 +16,11 @@
     </header>
 
     <main>
-      <p>Usage:</p>
-      <p>TODOTODOTODOTODOTODO</p>
-      <p>TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO</p>
+      <h3>Example Usage:</h3>
+      <p>https://near-tsunami.glitch.me/January 21, 2010</p>
+      <p>https://near-tsunami.glitch.me/1264032000</p>
+      <h3>Result:</h3>
+      <p>{"unix":1264032000,"natural":"Thursday, January 21st 2010"}</p>
     </main>
 
     <footer>
